<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text="@string/label_main_explanation01"/>
    <TextView 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text="@string/label_main_explanation02"/>
	<Button 
	    android:id="@+id/btn_main_lab01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_main_lab01_label"/>
	<TextView 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text="@string/label_main_explanation03"/>
	<Button 
	    android:id="@+id/btn_main_lab02"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_main_lab02_label"/>
	<TextView 
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
     	android:text="@string/label_main_explanation04"/>
	<Button 
	    android:id="@+id/btn_main_lab03"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btn_main_lab03_label"/>
</LinearLayout>